[package]
name = "escher-derive"
version = "0.2.0"
authors = ["Petros Angelatos <petrosagg@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Self-referencial structs using the async/await transformation"
repository = "https://github.com/petrosagg/escher"
keywords = ["lifetime", "ownership", "borrowing", "self", "reference"]
documentation = "https://docs.rs/escher"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
